0.496 2023-11-16
  [New Features]
    * Add $buf_offset argument to the sendto method in the Sys::Socket class.
      
      static method sendto : int ($sockfd : int, $buf : string, $len : int, $flags : int, $addr : Sys::Socket::Sockaddr, $addrlen : int, $buf_offset : int = 0);

0.495001 2023-11-14
  [Bug Fix]
    * Fix a bug that the Sys::Socket::Errno class file is not added.
0.495 2023-11-14
  [Bug Fix]
    * Fix the bug that the error handling of the connect method in the Sys::Socket does not work well.
  [Incompatible Changes]
    * Remove the connect_raw method in the Sys::Socket class.
    * Remove the getaddrinfo_raw method in the Sys::Socket class.
    * Remove the getnameinfo_raw method in the Sys::Socket class.
    * Remove the access_raw method in the Sys::IO class.
    * Remove the eaccess_raw method in the Sys::IO class.
    * Remove the faccessat_raw method in the Sys::IO class.
    * Remove the fstat_raw method in the Sys::IO::Stat class.
    * Remove the lstat_raw method in the Sys::IO::Stat class.
    * Remove the stat_raw method in the Sys::IO::Stat class.
  [Document Fix]
    * Add the doc of the faccessat method in the Sys::IO class.
  [Exception Message Changes]
    * Add periods to exception messages.
  [New Features]
    * Add the Sys::Socket::Errno doc.
    * Add the say method to the Sys class.
  [Bug Fix]
    * Fix the bug that the new method in the Sys::Poll::PollfdArray cannot receive 0.
0.494 2023-11-12
  [Prerequirement Changes]
    * Require SPVM 0.989060.
  [Test Improvement]
    * Tests of sockets becomes more relaiable.
0.493 2023-10-02
  [Requirement Changes]
    * Require SPVM 0.989047.
  [Internal Changes]
    * Use new native APIs.
  [Exception Message Changes]
    * Improve English of exception messages.
  [Document Changes]
    * Improve the formats of documents.
  [New Features]
    * Add the spvm_stdin method to the Sys::IO class.
    * Add the spvm_stdout method to the Sys::IO class.