@@ -4,6 +4,9 @@
       
       static method sendto : int ($sockfd : int, $buf : string, $len : int, $flags : int, $addr : Sys::Socket::Sockaddr, $addrlen : int, $buf_offset : int = 0);
 
+    * Add $buf_offset argument to the send method in the Sys class.
+      
+      static method sendto : int ($sockfd : int, $buf : string, $len : int, $flags : int, $addr : Sys::Socket::Sockaddr, $addrlen : int, $buf_offset : int = 0);
 0.495001 2023-11-14
   [Bug Fix]
     * Fix a bug that the Sys::Socket::Errno class file is not added.
